<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/ParentScrollView"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/MainLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Activity_Testing">

    <TextView
        android:id="@+id/Cultivar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="@dimen/MarginTop1"

        android:text="@string/Cultivar"
        android:textSize="@dimen/TextSize2"
        />
    <EditText
        android:id="@+id/CultivarEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/Cultivar"/>
    <TextView
        android:id="@+id/Lote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/CultivarEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="@dimen/MarginTop1"

        android:text="@string/Lote"
        android:textSize="@dimen/TextSize2"
        />
    <EditText
        android:id="@+id/LoteEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/Lote"
        />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/LoteEditText"
        app:layout_constraintLeft_toLeftOf="parent"

        android:layout_marginTop="@dimen/MarginTop1"
        android:layout_marginLeft="@dimen/MarginTop1">
    <Button
        android:id="@+id/ButtonU1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="listenButtons"
        android:text="U1"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <Button
        android:id="@+id/ButtonU2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="listenButtons"
        android:text="U2"

        app:layout_constraintTop_toBottomOf="@+id/ButtonU1"
        app:layout_constraintLeft_toLeftOf="parent"

        android:layout_marginTop="@dimen/MarginTop1" />

    <Button
        android:id="@+id/ButtonU3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="listenButtons"
        android:text="U3"

        app:layout_constraintTop_toBottomOf="@+id/ButtonU2"
        app:layout_constraintLeft_toLeftOf="parent"

        android:layout_marginTop="@dimen/MarginTop1"/>

    <Button
        android:id="@+id/ButtonU4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="listenButtons"
        android:text="U4"

        app:layout_constraintTop_toBottomOf="@+id/ButtonU3"
        app:layout_constraintLeft_toLeftOf="parent"

        android:layout_marginTop="@dimen/MarginTop1"

        />

    <Button
        android:id="@+id/ButtonU5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="listenButtons"
        android:text="U5"

        app:layout_constraintTop_toBottomOf="@+id/ButtonU4"
        app:layout_constraintLeft_toLeftOf="parent"

        android:layout_marginTop="@dimen/MarginTop1"
        />

    <Button
        android:id="@+id/ButtonU6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="listenButtons"
        android:text="U6"

        app:layout_constraintTop_toBottomOf="@+id/ButtonU5"
        app:layout_constraintLeft_toLeftOf="parent"

        android:layout_marginTop="@dimen/MarginTop1"
        />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ParentForMButtons"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@+id/LoteEditText"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"

    android:layout_marginTop="@dimen/MarginTop1">
    <Button
        android:id="@+id/ButtonM1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="listenButtons"
        android:text="M1"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <Button
        android:id="@+id/ButtonM2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="listenButtons"
        android:text="M2"

        app:layout_constraintTop_toBottomOf="@id/ButtonM1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        android:layout_marginTop="@dimen/MarginTop1"/>

    <Button
        android:id="@+id/ButtonM3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="listenButtons"
        android:text="M3"

        app:layout_constraintTop_toBottomOf="@id/ButtonM2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        android:layout_marginTop="@dimen/MarginTop1"/>

    <Button
        android:id="@+id/ButtonM4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="listenButtons"
        android:text="M4"

        app:layout_constraintTop_toBottomOf="@id/ButtonM3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        android:layout_marginTop="@dimen/MarginTop1"/>

    <Button
        android:id="@+id/ButtonM5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="listenButtons"
        android:text="M5"

        app:layout_constraintTop_toBottomOf="@id/ButtonM4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        android:layout_marginTop="@dimen/MarginTop1"/>

    <Button
        android:id="@+id/ButtonM6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="listenButtons"
        android:text="M6"

        app:layout_constraintTop_toBottomOf="@id/ButtonM5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        android:layout_marginTop="@dimen/MarginTop1"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/LoteEditText"
        android:layout_marginRight="@dimen/MarginTop1"
        >
    <Button
        android:id="@+id/ButtonP1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="listenButtons"
        android:text="P1"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/MarginTop1"
        />

    <Button
        android:id="@+id/ButtonP2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="listenButtons"
        android:text="P2"

        app:layout_constraintTop_toBottomOf="@+id/ButtonP1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/MarginTop1"
        />

    <Button
        android:id="@+id/ButtonP3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="listenButtons"
        android:text="P3"

        app:layout_constraintTop_toBottomOf="@+id/ButtonP2"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/MarginTop1"
        />

    <Button
        android:id="@+id/ButtonP4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="listenButtons"
        android:text="P4"

        app:layout_constraintTop_toBottomOf="@+id/ButtonP3"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/MarginTop1"
        />

    <Button
        android:id="@+id/ButtonP5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="listenButtons"
        android:text="P5"

        app:layout_constraintTop_toBottomOf="@+id/ButtonP4"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/MarginTop1"
        />

    <Button
        android:id="@+id/ButtonP6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="listenButtons"
        android:text="P6"

        app:layout_constraintTop_toBottomOf="@+id/ButtonP5"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/MarginTop1"
        />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView
        android:id="@+id/Result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="Resultado"
        android:textSize="@dimen/TextSize1"

        app:layout_constraintTop_toBottomOf="@id/ParentForMButtons"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/MarginTop1"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ParentForDecisionButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/Result"
        android:layout_marginTop="@dimen/MarginTop0">
        <Button
            android:id="@+id/ButtonDiscardTest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Save"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            android:layout_marginLeft="@dimen/MarginTop1"

            android:onClick="saveTestClone"
            />

        <Button
            android:id="@+id/ButtonSaveTest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Discard"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            android:layout_marginRight="@dimen/MarginTop1"

            android:onClick="discardTest"
            />
        <Button
            android:id="@+id/ButtonMakeResume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Resume"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="@dimen/MarginTop1"

            android:onClick="gerarRelatório"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView
        android:id="@+id/TextViewMajorString"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        app:layout_constraintTop_toBottomOf="@id/ParentForDecisionButtons"
        >


    </TextView>
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>